[tool.poetry]
name = "pubmed_papers"
version = "0.1.0"
description = "Fetch research papers from PubMed."
authors = ["Rajini <rajinichippa09@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
requests = "^2.31.0"
typer = "^0.9.4"
pandas = "^2.2.3"

[tool.poetry.scripts]
get-papers-list = "pubmed_papers.cli:get_papers_list"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
